-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 11
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264088 | openjdk8u302 | Kim Barrett | P2 | Resolved | Fixed | b01 |
| JDK-8248936 | 8u271 | David Buck | P2 | Resolved | Fixed | b01 |
| JDK-8239132 | 8u261 | David Buck | P2 | Closed | Fixed | b01 |
| JDK-8244876 | 8u251 | David Buck | P2 | Resolved | Fixed | b34 |
| JDK-8251614 | emb-8u271 | David Buck | P2 | Resolved | Fixed | team |
| JDK-8246871 | emb-8u261 | David Buck | P2 | Resolved | Fixed | team |
#if HEAP_REGION_SET_FORCE_VERIFY
^
/Users/hjen/ws/panama.dev/src/hotspot/share/gc/g1/heapRegionSet.hpp:53:38: note: expanded from macro 'HEAP_REGION_SET_FORCE_VERIFY'
#define HEAP_REGION_SET_FORCE_VERIFY defined(ASSERT)
^
2 warnings generated.
- backported by
-
JDK-8244876 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Resolved
-
-
JDK-8246871 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Resolved
-
-
JDK-8248936 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Resolved
-
-
JDK-8251614 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Resolved
-
-
JDK-8264088 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Resolved
-
-
JDK-8239132 Xcode 9.3 produce warning -Wexpansion-to-defined
-
- Closed
-
- duplicates
-
JDK-8201187 MacOS: Xcode 9.3: Build Failure
-
- Closed
-
- relates to
-
JDK-8201187 MacOS: Xcode 9.3: Build Failure
-
- Closed
-