8200550: Xcode 9.3 produce warning -Wexpansion-to-defined

Removed problem macros.

Reviewed-by: tschatzl, dholmes, coleenp